idk if this made it better
the website we use in class made it look like the top part and i had to convert it to html

--- a/Copyright HTML5/Index.html
+++ b/Copyright HTML5/Index.html
@@ -1,4 +1,4 @@
-::Title:: 1.4.8 One Pager
+<!--::Title:: 1.4.8 One Pager
 
 ::Heading:: Description of copyright
 ::Body:: 
@@ -19,3 +19,27 @@
     <a href="https://smallbusiness.chron.com/pros-cons-copyright-laws-52554.html">Cons Source</a>
 
 <script type="text/javascript" src="script.js"></script>
+-->
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>1.4.8 One Pager</title>
+    </head>
+    the exclusive legal right, given to an originator or an assignee to print, publish, perform, film, or record literary, artistic, or musical material, and to authorize others to do the same.
+    <a href="https://www.oed.com/?tl=true">Definition Source</a>
+    <body>
+    ** The ability to sue an infringer in federal court
+    ** Ease in obtaining an injunction quickly
+    ** Providing public notice of ownership rights and creating a presumption of ownership in court
+    <a href="https://www.klemchuk.com/ideate/copyright-registration-benefits">Pros Source</a>
+    </body>
+    <body>
+    ** copyrights protect the expression of an idea, not the idea itself
+    ** It doesnt always stop people from taking your stuff
+    ** copyrights give creators the sole right to profit from their work
+    <a href="https://smallbusiness.chron.com/pros-cons-copyright-laws-52554.html">Cons Source</a>
+    </body>
+
+    <script type="text/javascript" src="script.js"></script>
+</html>
